--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -1,6 +1,7 @@
 .projects {
 	background-color: var(--clr-neutral-900);
 	padding-block: var(--size-600);
+	overflow-x: hidden;
 
 	&__title {
 		font-size: var(--fs-section-heading);
